# CalculusParser

./: .gitignore  CMakeLists.txt  CMakePresets.json  Grammar.md  README.md
Docs/: AbstractSyntaxTree.md  Grammar.md  Nodes.md  ParsingStrategy.md
include/ASTNode/: ASTNode.h
include/ASTNode/ExpressionNode/: ExpressionNode.h
include/ASTNode/FactorNode/: FactorNode.h
include/ASTNode/OperatorNode/: OperatorNode.h
include/Lexer/: Token.h
source/: CMakeLists.txt
source/ASTNode/ExpressionNode/: ExpressionNode.cpp
source/ASTNode/FactorNode/: FactorNode.cpp
source/ASTNode/FactorNode/FunctionNode/: FunctionNode.cpp
source/ASTNode/FactorNode/NumberNode/: NumberNode.cpp
source/ASTNode/FactorNode/VariableNode/: VariableNode.cpp
source/ASTNode/OperatorNode/: OperatorNode.cpp
source/ASTNode/OperatorNode/BinaryOperatorNode/: BinaryOperatorNode.cpp
source/ASTNode/OperatorNode/BinaryOperatorNode/AddNode/: AddNode.cpp
source/ASTNode/OperatorNode/BinaryOperatorNode/DivideNode/: DivideNode.cpp
source/ASTNode/OperatorNode/BinaryOperatorNode/MultiplyNode/: MultiplyNode.cpp
source/ASTNode/OperatorNode/BinaryOperatorNode/SubtractNode/: SubtractNode.cpp
source/ASTNode/TermNode/: TermNode.cpp
source/CalculusParserApi/: CMakeLists.txt
source/CalculusParserApi/ASTNode/ExpressionNode/: ExpressionNode.cpp
source/CalculusParserApi/ASTNode/FactorNode/: FactorNode.cpp
source/CalculusParserApi/ASTNode/FactorNode/FunctionNode/: FunctionNode.cpp
source/CalculusParserApi/ASTNode/FactorNode/NumberNode/: NumberNode.cpp
source/CalculusParserApi/ASTNode/FactorNode/VariableNode/: VariableNode.cpp
source/CalculusParserApi/ASTNode/OperatorNode/: OperatorNode.cpp
source/CalculusParserApi/ASTNode/OperatorNode/BinaryOperatorNode/: BinaryOperatorNode.cpp
source/CalculusParserApi/ASTNode/OperatorNode/BinaryOperatorNode/AddNode/: AddNode.cpp
source/CalculusParserApi/ASTNode/TermNode/: TermNode.cpp
source/CalculusParserApi/Lexer/: Lexer.cpp  Token.cpp
source/CalculusParserCli/: main.cpp
source/Lexer/: Lexer.cpp  Token.cpp
test/: CMakeLists.txt
test/ASTNode/BinaryOperatorNode/AddNode/: AddNode_tests.cpp
test/ASTNode/ExpressionNode/: ExpressionNode_tests.cpp
test/ASTNode/FactorNode/: FactorNode_tests.cpp
test/ASTNode/FactorNode/NumberNode/: NumberNode_tests.cpp
test/ASTNode/FactorNode/VariableNode/: VariableNode_tests.cpp
test/ASTNode/TermNode/: TermNode_tests.cpp
test/Lexer/: Lexer_tests.cpp
todo/: Epic0_InitializeProject.md  Epic2_CreateParserLogicAndAST.md
(+23 files in other folders)
